fixed another error in GraphView